@@ -260,7 +260,7 @@ public class ClassFileReader implements Closeable {
             DirectoryIterator() throws IOException {
                 List<Path> paths = null;
                 try (Stream<Path> stream = Files.walk(path, Integer.MAX_VALUE)) {
-                    paths = stream.filter(ClassFileReader::isClass).toList();
+                    paths = stream.filter(ClassFileReader::isClass).collect(Collectors.toList());
 
                 }
                 this.entries = paths;
